# tpserver-cpp

./: configure.ac  tpserver-cpp-inplace.xml  tpserver-cpp.xml.in
modules/games/mtsec/: tpserver-cpp-mtsec.xml
modules/persistence/: Makefile.am
modules/persistence/sqlite/: Makefile.am  sample.conf  sqlitepersistence.cpp  sqlitepersistence.h
